--- a/VaccumRoom/VacuumRoom.csproj
+++ b/VaccumRoom/VacuumRoom.csproj
@@ -49,6 +49,7 @@
     <Compile Include="LegacyVacuumRobot.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VacuumRobot.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
