--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /.vs/VacuumRoom/v15/Server/sqlite3
+/.vs/VacuumRoom/v15
